--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: network_bound_resource
-description: A starting point for Dart libraries or applications.
+description: A package to handle offline http request easily
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/CamiiloAF/network_bound_resource
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -16,3 +16,4 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.1
   test: ^1.22.0
+  dart_code_metrics: ^5.1.0
